# Alcubierre

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  laser_beam.hpp  light_base.hpp  lighting_system.hpp  object.hpp  projectile.hpp  shader_loader.hpp  skybox.hpp  star.hpp  window.hpp
include/object/: laser_beam.hpp  projectile.hpp  star.hpp
include/rendering/: bloom.hpp  frame_graph.hpp  fxaa.hpp  render_pass.hpp  render_target.hpp  smaa.hpp  texture_handle.hpp  warp.hpp
include/ui/: button.hpp  debug_hud.hpp  menu.hpp
include/ui/widget/: button.hpp  checkbox.hpp  selector.hpp  slider.hpp  textbox.hpp  widget.hpp
include/utils/: draw_texture.hpp  game_config.hpp  input_manager.hpp  material_manager.hpp  shader_manager.hpp
lib/: camera.cpp  laser_beam.cpp  light_base.cpp  lighting_system.cpp  main.cpp  projectile.cpp  shader_loader.cpp  skybox.cpp  star.cpp  utils.cpp  window.cpp
lib/object/: laser_beam.cpp  projectile.cpp  star.cpp
lib/rendering/: bloom.cpp  frame_graph.cpp  fxaa.cpp  render_pass.cpp  render_target.cpp  smaa.cpp  texture_handle.cpp  warp.cpp
lib/ui/: button.cpp  debug_hud.cpp  menu.cpp
lib/ui/widget/: button.cpp  checkbox.cpp  selector.cpp  slider.cpp  textbox.cpp
lib/utils/: draw_texture.cpp  game_config.cpp  input_manager.cpp  material_manager.cpp  shader_loader.cpp  shader_manager.cpp
shaders/: bloom.fs  bloom.vs  bloom_blur_h.fs  bloom_blur_v.fs  bloom_extract.fs  fxaa.fs  fxaa.vs  laser_beam.fs  laser_beam.vs  lighting.glsl  lit_object.fs  lit_object.vs  projectile.fs  projectile.vs  relativistic.fs  skybox.fs  skybox.vs  smaa.vs  smaa_blend.fs  smaa_edge.fs  smaa_resolve.fs  star.fs  warp.fs  warp.vs
tool/: build.py  requirements.txt  svg_convert.py
